# DigitCode-EscapeRoom

./: .gitignore  CLAUDE.md  CMakeLists.txt  DigitCode_BaoCao_v6.docx  PRJ_DigitCode_Master_Context.md  PROJECT_REPORT.md  Project_Structure_and_File_Mapping.md  README.md  ToanBoCode_SINGLE.txt  main.cpp
UI/: BottomBoard.qml  CmpArrow.qml  CounterBox.qml  DraftGrid.qml  EoDot.qml  LedDisplay.qml  LogicButton.qml  Main.qml  ScreenGame.qml  ScreenMenu.qml  ScreenReady.qml  ScreenRealLife.qml  ScreenResult.qml  TopBoard.qml
backend/: gameboard.cpp  gameboard.h  hardwareserver.cpp  hardwareserver.h
docs/hardware/: schematic.html  schematic.md
firmware/DigitCodeFirmware/: DigitCodeFirmware.ino  secrets.h.example
firmware/tools/ab_diag/: ab_diag.ino
firmware/tools/i2c_scanner/: i2c_scanner.ino
firmware/tools/matrix_test/: matrix_test.ino
firmware/tools/max7219_test/: max7219_test.ino
